# GPU-Microkernel-

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: throughput_bench.cu
cuda/include/: metrics.cuh  scheduler.cuh
cuda/src/: host_launcher.cpp  microkernel.cu
docs/: ARCHITECTURE.md  PROFILING.md
scripts/: init_repo.sh
src/: host.rs  lib.rs
tests/: queue_tests.cu
